# delegation-core-v6.4

./: AGENT_GUIDE.md  CHANGELOG.md  CLAUDE_SYSTEM_PROMPT.md  DEPLOYMENT_LOG.md  install.bat  install.sh  pyproject.toml
hooks/: session_export.py  session_start_brief.py
src/delegation_core/: __init__.py  classifier.py  cli.py  config.py  downloader.py  embeddings.py  engine.py  extractor.py  ingest.py  jobs.py  junk.py  linker.py  merger.py  organizer.py  server.py  session.py  sidecar.py  splitter.py  synthesizer.py  tracker.py  vault.py  wizard.py
