[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "delegation-core"
version = "0.6.4"
description = "Local MCP delegation server: llama.cpp + BGE + ChromaDB + Obsidian vault"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.4.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "requests>=2.32.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    # file format extraction
    "pypdf>=4.0.0",
    "python-docx>=1.0.0",
    "openpyxl>=3.1.0",
    "python-pptx>=0.6.23",
    "beautifulsoup4>=4.12.0",
    # sidecar YAML support
    "pyyaml>=6.0",
]

# v5.1: web search is opt-in. It reaches the public internet (DuckDuckGo),
# which is outside delegation-core's local-only design, so its dependency is
# not installed by default. Enable with:  pip install "delegation-core[web]"
# and set web_search_enabled=true in config.json.
# Uses `ddgs` — the maintained rename of `duckduckgo-search`, which now returns
# 0 results under the old name.
[project.optional-dependencies]
web = ["ddgs>=6.0.0"]

[project.scripts]
delegation-core = "delegation_core.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
